--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import 'variables';
 
 // External libraries
 @import "bootstrap";
@@ -9,4 +10,7 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/home";
 @import "pages/index";
+@import "components/index_posts";
+@import "components/show_posts";
