--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,13 +12,17 @@
   <% end %>
 </div>
 
-<h3 class="add-comment-title">Add a Comment</h3>
-<%= simple_form_for([@post, @comment]) do |f| %>
-  <div class="form-group">
-    <%= f.input :content, as: :text, label: "Your Comment", input_html: { rows: 5 }, class: "form-control" %>
+
+
+  <div class="form-container">
+  <h3 class="add-comment-title">Add a Comment</h3>
+  <%= simple_form_for([@post, @comment]) do |f| %>
+    <div class="form-group">
+      <%= f.input :content, as: :text, label: "Your Comment", input_html: { rows: 5 }, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Submit", class: "btn btn-primary submit-comment-btn" %>
+    </div>
+  <% end %>
   </div>
-  <div class="form-group">
-    <%= f.submit "Submit Comment", class: "btn btn-primary submit-comment-btn" %>
-  </div>
-<% end %>
 </div>
